--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/meanmenu.css">
     <link rel="stylesheet" href="assets/css/remixicon.css">
-    <!----  <link rel="stylesheet" href="assets/css/flaticon.css">  -->
+    <link rel="stylesheet" href="assets/css/flaticon.css">
     <link rel="stylesheet" href="assets/css/odometer.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
@@ -799,7 +799,7 @@
     <!-- Links of JS files -->
     <!-- JavaScript Bundle with Popper -->
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/jquery.meanmenu.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.appear.js"></script>
