--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="Australian Web Design Company | Websites Designers in Melbourne">
     <!-- Links of CSS files -->
     <!----   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
@@ -61,7 +61,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/responsive.css">  -->
 
-    <title>Simply Web Solutions - Web Design for Small Business</title>
+    <title>Australian Website Design for Small Business</title>
 
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
