--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     <link rel="icon" type="image/png" href="assets/images/sw-icon.ico">
 </head>
 
-
 <body>
 
     <!-- Start Preloader Area -->
@@ -706,7 +705,8 @@
                             <h3>Contact Us</h3>
                         </div>
 
-                        <form class="appointment-form" name="Home_Contact" data-netlify="true">
+                        <form data-netlify-recaptcha="true" class="appointment-form" name="Home_Contact"
+                            data-netlify="true">
                             <div class="form-group">
                                 <input type="text" name="Name" class="form-control" placeholder="Enter your name">
                             </div>
@@ -728,6 +728,7 @@
                                 <textarea name="message" style="color:white;" class="form-control"
                                     placeholder="Write message..."></textarea>
                             </div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button type="submit" class="default-btn">Submit</button>
                         </form>
                     </div>
