--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                                 <textarea name="message" style="color:white;" class="form-control"
                                     placeholder="Write message..."></textarea>
                             </div>
-                            <div data-netlify-recaptcha="true"></div>
+                            <div class="mx-auto" data-netlify-recaptcha="true"></div>
                             <button type="submit" class="default-btn">Submit</button>
                         </form>
                     </div>
