--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                         <ul class="main-banner-social">
                             <li>
-                                <a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank">
+                                <a href="https://www.facebook.com/simplywebsolutionsau" target="_blank">
                                     <i class="ri-facebook-line"></i>
                                 </a>
                             </li>
