--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                                     data-bs-parent="#FaqAccordion">
                                     <div class="accordion-body">
                                         <p>Our billing method works just like any other subscription. Pay a fixed price
-                                            every day of the month - no less, no more.
+                                            once a month - no less, no more.
                                         </p>
                                     </div>
                                 </div>
