--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="main-banner-content" data-speed="0.02" data-revert="true">
                         <span>WE PROVIDE</span>
                         <h1>Small Business Web Design + Development</h1>
-                        <p>Fully custom written code and without page builders like Wordpress - The result is blazingly
+                        <p>Fully custom written code with the latest technologies - The result is blazingly
                             quick websites! </p>
 
                         <ul class="banner-btn">
